# Wedding-Planner-OS-demo-Front

./: .gitignore  AI_FEATURES.md  HACKATHON_SETUP.md  NOTION_API_TEMPLATE.md  README.md  RESTART_SERVERS.sh  api_reference.html  api_reference_details.html  board.html  budget.html  calendar.html  chat.html  database_erd_viewer.html  generate_api_docs.py  index.html  pyproject.toml  requirement.txt  sync-subtree-workflow.sh  voice.html
0.Wedding_excelfiles/: 14ben_결혼식 비용 정리.xlsx  2024년 6월 결혼식 예산 정리.xlsx  24년 11월 김해 결혼 준비.xlsx  24년 11월 창원 웨딩의 전당 결혼 준비.xlsx  24년 4월 문정 루이비스 결혼 준비.xlsx
wedding-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
wedding-react/src/: App.css  App.tsx  main.tsx
wedding-react/src/contexts/: InvitationContext.jsx  auth.ts
wedding-react/src/hooks/: useApi.ts  useFetch.jsx  useToast.ts
wedding-react/src/pages/: BoardView.tsx  BudgetView.css  BudgetView.tsx  CalendarView.css  CalendarView.tsx  ChatView.css  ChatView.tsx  DigitalInvitationView.css  DigitalInvitationView.tsx  DocumentVaultView.css  DocumentVaultView.tsx  HomeView.css  HomeView.tsx  InvitationView.tsx  PrivateSpaceView.css  PrivateSpaceView.tsx  ReviewSummaryView.css  ReviewSummaryView.tsx  ReviewWriteView.css  ReviewWriteView.tsx  VendorMessageView.css  VendorMessageView.tsx  VendorView.css  VendorView.tsx  VoiceView.css  VoiceView.tsx
wedding-react/src/router/: index.tsx
wedding-vue/: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  README.md  env.development.sample  env.production.sample  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
wedding-vue/public/: manifest.json  sw.js
wedding-vue/src/: App.vue  main.ts
wedding-vue/src/composables/: useApi.ts  useToast.ts
wedding-vue/src/config/: env.ts
wedding-vue/src/router/: index.ts
(+132 files in other folders)
